# intervals

./: .gitignore  CMakeLists.txt  README.md  deal_time.py  index.html  plot_gap_distribution.py  test_gap.sh  test_numbers.py  test_queries.sh  test_speed.sh
.github/: run-tests.sh
.github/workflows/: push.yml
cmake/: FindGMP.cmake  IntervalsDependencies.cmake  IntervalsDownloadExternal.cmake  IntervalsUtils.cmake
css/: about.902789b5.css  app.cd14638f.css
datas/: arm_time.txt  comparison_linux.p  comparison_mac.p  comparison_sin_mac.p  comparison_windows.p  linux_time.txt  mac_time.txt  outliers_gap_linux.txt  outliers_gap_mac.txt  outliers_gap_windows.txt
interval_operations/: compile.sh
interval_operations/src/: compile.sh  interval.bc  interval.cc  interval.h  interval.ll  interval_c.cc  interval_c.h  rounding.ll
js/: about.1cc07164.js  about.1cc07164.js.map  about.342a1233.js  about.342a1233.js.map  about.6a346081.js  about.6a346081.js.map  about.b855734a.js  about.b855734a.js.map  about.d1b5d207.js  about.d1b5d207.js.map  app.0b362ea5.js  app.0b362ea5.js.map  app.5f4d9e0e.js  app.5f4d9e0e.js.map  app.73f81121.js  app.73f81121.js.map  app.7c9fff27.js  app.7c9fff27.js.map  app.c87390d9.js  app.c87390d9.js.map  app.d9b6069a.js.map  chunk-vendors.84aef80c.js  chunk-vendors.84aef80c.js.map
mathmetica_notebooks/: plot_gap_distribution.py  verify.nb  verify_arm.nb  verify_linux.nb  verify_queries.wls  verify_small.nb
random_equations/: FunctionNode.py  random_equation.py
rounded_operations/: compile.sh
rounded_operations/src/: rounded.c  rounded.h  rounded.ll
src/: CMakeLists.txt  FPBench_methods.hpp  Rational.h  flags.hpp  helper_functions.hpp  interval.cpp  interval.hpp  main.cpp  methods.hpp
tests/: CMakeLists.txt  Rational.h  flags.hpp  gmp_rational.h  helper.hpp  macro_functions.hpp  main.cpp
tests/gap/: CMakeLists.txt  gap.cpp
tests/query/: CMakeLists.txt  query.cpp
tests/speed/: CMakeLists.txt  speed.cpp
